--- a/deployment/layouts/index.html
+++ b/deployment/layouts/index.html
@@ -33,7 +33,7 @@
 <meta property="og:type" content="article" />
 <meta property="article:published_time" content="2017-01-15T00:00:00+00:00" />
 <script type="application/ld+json">
-{"description":"Use Jekyll layouts to reduce repetition on your site","mainEntityOfPage":{"@type":"WebPage","@id":"https://orange-ape.cloudvent.net//deployment/layouts/"},"@type":"BlogPosting","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://orange-ape.cloudvent.net//siteicon.png"}},"url":"https://orange-ape.cloudvent.net//deployment/layouts/","dateModified":"2017-01-15T00:00:00+00:00","datePublished":"2017-01-15T00:00:00+00:00","headline":"Layouts","@context":"http://schema.org"}</script>
+{"description":"Use Jekyll layouts to reduce repetition on your site","mainEntityOfPage":{"@type":"WebPage","@id":"https://orange-ape.cloudvent.net//deployment/layouts/"},"@type":"BlogPosting","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://orange-ape.cloudvent.net//siteicon.png"}},"headline":"Layouts","url":"https://orange-ape.cloudvent.net//deployment/layouts/","datePublished":"2017-01-15T00:00:00+00:00","dateModified":"2017-01-15T00:00:00+00:00","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://orange-ape.cloudvent.net//feed.xml" title="Base" />
@@ -92,17 +92,17 @@
 	
 
 		
-		<a href="/faq/" class="">FAQ</a>
-	
-	
-
-		
 		<a href="/" class="">Tutorials</a>
 	
 	
 
 		
 		<a href="/videos/" class="">Videos</a>
+	
+	
+
+		
+		<a href="/faq/" class="">FAQ</a>
 	
 </nav>
 
